--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,9 @@
 name: Generate Snake Game
 
 on:
-  schedule: # atualiza todo dia à meia-noite
-    - cron: "0 0 * * *"
-  workflow_dispatch: # permite rodar manualmente
+  schedule:
+    - cron: "0 0 * * *"  # roda todo dia à meia-noite
+  workflow_dispatch:        # permite rodar manualmente
   push:
     branches:
       - main
@@ -16,15 +16,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate Snake
-        uses: Platane/snk@v3
+        uses: Platane/snk@v3.1
         with:
           github_user_name: Dreyzyy
           outputs: dist/snake.svg
-          background: "1E1B2B"    # cor de fundo similar ao Midnight Purple
-          head: "A855F7"           # cabeça da cobrinha (igual ao corpo)
-          tail: "A855F7"           # corpo da cobrinha (igual à cabeça)
-          food: "FF4C4C"           # cor da comida (frutinha)
-          grid: "2A273A"           # cor do grid (linhas do fundo)
+          args: "--background 000000 --grid 2A273A --head A855F7 --tail A855F7"
 
       - name: Push to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
