--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,28 +1,38 @@
 name: Generate Snake Game
 
 on:
+  # atualiza automaticamente todo dia à meia-noite
   schedule:
-    - cron: "0 0 * * *"  # roda todo dia à meia-noite
-  workflow_dispatch:        # permite rodar manualmente
+    - cron: "0 0 * * *"
+
+  # permite rodar manualmente
+  workflow_dispatch:
+
+  # roda em cada push no main
   push:
     branches:
       - main
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
+      # checkout do repo
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Generate Snake
-        uses: Platane/snk@v3.1
+      # gera o SVG da cobrinha
+      - name: Generate Snake SVG
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: Dreyzyy
-          outputs: dist/snake.svg
-          args: "--background 000000 --grid 2A273A --head A855F7 --tail A855F7"
+          outputs: |
+            dist/snake.svg?palette=dark-purple
 
-      - name: Push to the output branch
+      # push pro branch output
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
